update_README_file

--- a/btcsdl/src/components/profile/title.scss
+++ b/btcsdl/src/components/profile/title.scss
@@ -47,6 +47,10 @@
   padding: 1px 3px;
   text-align: center;
   border-radius: 5px;
+
+  &:hover {
+		cursor: pointer;
+	}
 }
 
 .normal-title {
@@ -58,6 +62,10 @@
   padding: 1px 3px;
   text-align: center;
   border-radius: 5px;
+
+  &:hover {
+		cursor: pointer;
+	}
 }
 
 .king-harem {
