--- a/btcsdl/src/components/profile/profile.scss
+++ b/btcsdl/src/components/profile/profile.scss
@@ -125,6 +125,7 @@
   border-radius: 10px;
   padding: 10px 16px;
   overflow: hidden;
+  /* z-index: 9999; */
 }
 
 .my-info {
@@ -174,7 +175,7 @@
   top: 105px;
   right: 30px;
   padding: 8px 16px;
-  z-index: 1;
+  z-index: 9999;
   /* animation: fadein 0.5s, fadeout 0.5s 2.5s; */
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2);
   background: #fff;
